fixed horizontal scroll issue & amends for bootstrap grid to improve responsiveness

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,8 @@ body {
     text-align: center;
     padding: 0;
     margin: 0;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 .hide {
